--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -1,4 +1,4 @@
-section{
+main .banner{
     height: 100vh;
     margin-top: 50px;
     background-image: linear-gradient(to top, rgba(0,0,0,0.8), rgba(0,0,0,0.3)), url(../Images/Home/rizal-home.jpg);
@@ -9,35 +9,34 @@ section{
     text-align: center;
 }
 
+.headings{
+    position: absolute;
+    bottom: 100px;
+    right: 0;
+    left: 0;
+    padding: 0 30px;
+}
+
 .heading{
     color: #fff;
     font-size: 54px;
-    position: absolute;
-    bottom: 250px;
-    right: 0;
-    left: 0;
+    margin-bottom: 8px;
 }
 
 .sub-heading{
     color: #fff;
     font-weight: 500;
     font-size: 20px;
-    position: absolute;
-    bottom: 200px;
-    right: 0;
-    left: 0;
 }
 
 .explore-btn{
     color: #fff;
     font-weight: 700;
     font-size: 24px;
-    padding: 14px 0;
+    padding: 14px 20px;
     border: solid 5px #fff;
-    width: 240px;
-    position: relative;
-    bottom: -560px;
     background-color: #ffffff00;
+    margin-top: 60px;
     cursor: pointer;
 }
 
@@ -46,27 +45,29 @@ section{
 }
 
 @media(max-width: 768px){
+    .headings{
+        bottom: 40px;
+    }
     .heading{
         font-size: 40px;
-        bottom: 200px;
     }
     .sub-heading{
         font-size: 16px;
-        bottom: 170px;
     }
     .explore-btn{
         font-size: 18px;
-        width: 180px;
         border: solid 4px #fff;
-        bottom: -580px;
     }
 }
 
 @media(max-width: 600px){
-    .sub-heading{
-        bottom: 140px;
+    .headings{
+        bottom: 30px;
     }
-    .explore-btn{
-        bottom: -600px;
+}
+
+@media(max-width: 425px){
+    .heading{
+        font-size: 34px;
     }
 }
