--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -30,7 +30,6 @@ main .banner{
 }
 
 .explore-btn{
-    color: #fff;
     font-weight: 700;
     font-size: 24px;
     padding: 14px 20px;
@@ -39,6 +38,11 @@ main .banner{
     margin-top: 60px;
     cursor: pointer;
     transition: .2s ease-in-out;
+}
+
+.explore-btn a{
+    color: #fff;
+    text-decoration: none;
 }
 
 .explore-btn:hover{
@@ -143,10 +147,12 @@ main .banner{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    cursor: pointer;
 }
 
-.feature p{
+.feature a{
     color: #fff;
+    text-decoration: none;
     font-size: 20px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -154,22 +160,22 @@ main .banner{
 }
 
 .folklore{
-    background-image: linear-gradient(to left, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('../Images/Home/fulbanga.jpg');
+    background-image: linear-gradient(to left, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../Images/Home/fulbanga.jpg');
     background-position: left;
 }
 
 .traditionfestival{
-    background-image: linear-gradient(to left, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('../Images/Home/festival.jpeg');
+    background-image: linear-gradient(to left, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../Images/Home/festival.jpeg');
     background-position: center;
 }
 
 .delicacies{
-    background-image: linear-gradient(to left, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('../Images/Home/delicacies.jpg');
+    background-image: linear-gradient(to left, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../Images/Home/delicacies.jpg');
     background-position: right;
 }
 
 .historicalsites{
-    background-image: linear-gradient(to left, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('../Images/Home/simbahan.jpg');
+    background-image: linear-gradient(to left, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../Images/Home/simbahan.jpg');
     background-position: center;
 }
 
