--- a/Assets/Styles/about.css
+++ b/Assets/Styles/about.css
@@ -23,7 +23,7 @@ main{
 hr{
     width: 300px;
     size: 4px;
-    border: 3px solid #000;
+    border: 3px solid #2a8d4b;
     margin-bottom: 40px;
 }
 
