--- a/Assets/Styles/header.css
+++ b/Assets/Styles/header.css
@@ -14,29 +14,21 @@ header{
     display: flex;
     flex-direction: row;
     position: fixed;
-    height: 50px;
+    height: 60px;
     top: 0;
     right: 0;
     left: 0;
     align-items: center;
     justify-content: space-between;
     z-index: 999;
-    padding: 0 20px;
+    padding: 0 50px;
     background-color: #fff;
     box-shadow: 0 3px 5px #00000078;
 }
 
 .logo img{
-    width: 44px;
+    width: 170px;
     vertical-align: middle;
-}
-
-.title{
-    text-decoration: none;
-    color: #000;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
 }
 
 nav{
@@ -57,14 +49,31 @@ nav ul li a{
     text-decoration: none;
     color: #000;
     font-family: 'Poppins', sans-serif;
-    font-size: 15px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 600;
     padding: 10px 20px;
     border-radius: 2px;
+    position: relative;
 }
 
-nav ul li a:hover{
-    background-color: #cfcfcf7f;
+nav ul li a::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 4px;
+    width: 0;
+    height: 3px;
+    background-color: #2a8d4b;
+    border-radius: 40px;
+    transition: .3s ease-in-out;
+}
+
+nav ul li a:hover::after{
+    width: 100%;
+}
+
+nav ul li a.active::after{
+    width: 100%;
 }
 
 .hamburger-menu{
@@ -85,13 +94,97 @@ nav ul li a:hover{
     background-color: #000;
 }
 
+.home-header{
+    background-color: #00000000;
+    box-shadow: 0 0 0;
+    padding: 40px 100px;
+    transition: all 0.3s ease-in-out;
+}
+
+.line{
+    display: flex;
+    position: absolute;
+    width: 60%;
+    height: 2px;
+    border: none;
+    background-color: #1d833f;
+    border-radius: 40px;
+    top: 160px;
+    justify-self: center;
+    right: 0;
+    left: 0;
+    transition: all 0.2s ease-in-out;
+}
+
+.home-header .logo img{
+    width: 260px;
+}
+
+.home-header nav ul li a{
+    color: #fff;
+    font-weight: 600;
+}
+
+.home-header .hamburger-menu span{
+    background-color: #fff;
+}
+
+.home-header.sticky{
+    background-color: #fff;
+    box-shadow: 0 3px 5px #00000078;
+    padding: 0 50px;
+}
+
+.home-header.sticky .logo img{
+    width: 170px;
+}
+
+.home-header.sticky nav ul li a{
+    color: #000;
+}
+
+.home-header.sticky .hamburger-menu span{
+    background-color: #000;
+}
+
+.line.sticky{
+    width: 0;
+    visibility: hidden;
+}
+
+@media(max-width: 1024px){
+    .home-header{
+        padding: 40px 30px;
+    }
+    .line{
+        top: 140px;
+    }
+}
+
 @media(max-width: 768px){
+    .home-header{
+        padding: 40px;
+    }
+    .home-header nav ul li a{
+        color: #fff;
+    }
+    .home-header.sticky nav ul li a{
+        color: #fff;
+    }
+    .home-header nav ul{
+        top: 0;
+        padding-top: 140px;
+    }
+    .home-header.sticky nav ul{
+        top: 60px;
+        padding-top: 50px;
+    }
     nav ul{
         position: fixed;
         width: 100%;
         height: 100vh;
-        background-color: #000000d4;
-        top: 50px;
+        background-color: #000;
+        top: 60px;
         right: -120%;
         text-align: center;
         transition: all .3s ease-in-out;
@@ -125,5 +218,20 @@ nav ul li a:hover{
     }
     .hamburger-menu.active .bar:nth-child(3){
         transform: translateY(-8px) rotate(-45deg);
+    }
+}
+
+@media(max-width: 425px){
+    .home-header{
+        padding: 30px;
+    }
+    .home-header .logo img{
+        width: 200px;
+    }
+    header, .home-header.sticky{
+        padding: 0 30px;
+    }
+    .line{
+        top: 130px;
     }
 }
