--- a/Assets/Styles/header.css
+++ b/Assets/Styles/header.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #05b94a;
+    margin-left: 10px;
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+
 body{
     background-color: #ebebeb;
 }
