--- a/Assets/Styles/header.css
+++ b/Assets/Styles/header.css
@@ -48,7 +48,7 @@ nav{
 }
 
 nav ul{
-    padding: 20px;
+    padding: 20px 0 20px 20px;
 }
 
 nav ul li{
@@ -71,20 +71,21 @@ nav ul li a::after{
     content: "";
     position: absolute;
     left: 0;
-    bottom: 4px;
+    bottom: 6px;
     width: 0;
     height: 3px;
     background-color: #2a8d4b;
     border-radius: 40px;
     transition: .3s ease-in-out;
+    margin-left: 18px;
 }
 
 nav ul li a:hover::after{
-    width: 100%;
+    width: 80%;
 }
 
 nav ul li a.active::after{
-    width: 100%;
+    width: 80%;
 }
 
 .hamburger-menu{
