--- a/Assets/Styles/historicalsites.css
+++ b/Assets/Styles/historicalsites.css
@@ -75,7 +75,7 @@ main{
 }
 
 .content-div p{
-    margin: 0 60px 60px 60px;
+    margin: 0 60px 40px 60px;
     letter-spacing: .5px;
     word-spacing: 1px;
 }
@@ -154,6 +154,17 @@ main{
     margin-top: 90px;
 }
 
+.loc{
+    font-weight: 600;
+}
+.map{
+    width: 600px;
+    height: 450px;
+    border: solid 1px #000;
+    margin-top: -20px;
+    margin-bottom: 60px;
+}
+
 @media(max-width: 1250px){
     .head-section{
         width: 960px;
@@ -192,6 +203,10 @@ main{
     .content-img{
         width: 480px;
         height: 300px;
+    }
+    .map{
+        width: 400px;
+        height: 350px;
     }
     .content-div h1{
         font-size: 20px;
@@ -271,6 +286,10 @@ main{
         width: 380px;
         height: 220px;
     }
+    .map{
+        width: 300px;
+        height: 250px;
+    }
 }
 
 @media(max-width: 425px){
@@ -281,5 +300,9 @@ main{
     .content-div p{
         margin-left: 40px;
         margin-right: 40px;
+    }
+    .map{
+        width: 260px;
+        height: 200px;
     }
 }
