--- a/Assets/Styles/historicalsites.css
+++ b/Assets/Styles/historicalsites.css
@@ -287,7 +287,7 @@ main{
         height: 220px;
     }
     .map{
-        width: 300px;
+        width: 90%;
         height: 250px;
     }
 }
@@ -302,7 +302,6 @@ main{
         margin-right: 40px;
     }
     .map{
-        width: 260px;
         height: 200px;
     }
 }
