--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -13,7 +13,7 @@ main .banner{
     bottom: 100px;
     right: 0;
     left: 0;
-    padding: 0 30px;
+    padding: 0 100px;
 }
 
 .heading{
@@ -206,6 +206,7 @@ main .banner{
     }
     .headings{
         bottom: 40px;
+        padding: 0 50px;
     }
     .heading{
         font-size: 40px;
@@ -256,6 +257,9 @@ main .banner{
     .feature{
         width: 190px;
         height: 280px;
+    }
+    .headings{
+        padding: 0 30px;
     }
 }
 
